Aggiunta parametri in config + pulizia codice

--- a/OilTrendApplication/App.config
+++ b/OilTrendApplication/App.config
@@ -6,6 +6,7 @@
   </configSections>
   <appSettings>
     <add key="ServerUrl" value="127.0.0.1" />
+    <add key="ServerUrlPort" value="5000" />
     <add key="SourceBrentUrl" value="https://datahub.io/core/oil-prices/r/brent-daily.json" />
   </appSettings>
   <startup>
