--- a/OilTrendApplication/OilTrendApplication.csproj
+++ b/OilTrendApplication/OilTrendApplication.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Persistency\SQLiteManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Config.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
